# autogen_dev

./: .gitignore  Cargo.toml  _message_logic.md  _use_mpsc.md  command.sh
assets/: messages.json  messages.sql  stop.json
core/: Cargo.toml
core/src/: agent.rs  agent_runtime.rs  common_types.rs  lib.rs  main.rs  model_client.rs  tool.rs
core/src/agent/: agent_runtime.rs  chat_agent.rs  llm_agent.rs  mod.rs  oai_agent.rs  save_runtime.rs  try_to_convert.rs
core/src/agent/llm_backend/: llama.rs  mod.rs  openai.rs  vision_llama.rs
core/src/group_chat/: mod.rs
core/src/msg_types/: chat_msg_types.rs  llm_msg_types.rs  mod.rs
core/src/tool_types/: mod.rs
js_executor/: Cargo.toml
js_executor/src/: deno_js.rs  lib.rs
native_executor/: Cargo.toml
native_executor/src/: lib.rs
python_executor/: Cargo.toml
python_executor/src/: lib.rs  play_chess.py  vanilla_python.rs
rust_executor/: Cargo.toml
src/: agent.rs  agent_runtime.rs  common_types.rs  lib.rs  main.rs  tool.rs
tool_builder/: Cargo.toml
wasi_sdk/: Cargo.toml
wasi_sdk/src/: lib.rs
