[workspace]
members = ["core", "native_executor", "python_executor", "js_executor"]
resolver = "2"


[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.exlude]
members = ["wasi_sdk"]

[workspace.dependencies]
autogen_core = { path = "core" }
anyhow = "1"
serde = {version="1", features=["derive"]}
serde_json = "1"

