[package]
name = "autogen_core"
version = "0.1.0"
edition = "2021"
resolver = "2"

[lib]
crate-type = ["cdylib", "rlib"]
name = "autogen_core"
path = "src/lib.rs"

[[bin]]
name = "autogen"
path = "src/main.rs"


[dependencies]
once_cell = "1.20.2"
phantom-data = "0.0.1"
serde_json = "1.0.128"
uuid = "1.10.0"
