[package]
name = "autogen_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "autogen_core"
path = "src/lib.rs"

[[bin]]
name = "autogen"
path = "src/main.rs"


[dependencies]
tool_builder = {path = "../tool_builder"}
once_cell = "1.20.2"
phantom-data = "0.0.1"
serde_json = "1.0.128"
uuid = "1.10.0"
anyhow = {workspace = true}  
serde.workspace = true
ctor = "0.2.8"

[lints]
rust = { unused_variables = "allow", dead_code = "allow" }
