[package]
name = "autogen_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "autogen_core"
path = "src/lib.rs"

[[bin]]
name = "autogen"
path = "src/main.rs"


[dependencies]
tool_builder = {path = "../tool_builder"}
once_cell = "1.20.2"
phantom-data = "0.0.1"
serde_json = "1.0.128"
uuid = {version="1.10", features=["v4"]}
anyhow = {workspace = true}  
serde.workspace = true
ctor = "0.2.8"
reqwest = "0.12.8"
async-openai = "0.25.0"
dotenv = "0.15.0"
tokio = {version ="1.41.0", features=["full"]}

[lints]
rust = { unused_variables = "allow", dead_code = "allow" }
