[package]
name = "python_executor"
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
autogen_core = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = {version="1", features=["full"]}
regex = "1.11.0"


[lints]
rust = { unused_variables = "allow", dead_code = "allow" }